# swoogle

./: .dockerignore  .gitignore  .hlint.yaml  CHANGELOG.md  Dockerfile  Dockerfile.cd  LICENSE  NOTES.md  README.md  cabal.haskell-ci  cabal.project  cabal.project.freeze  cabal.project.local  cabal.project.test  flake.nix  fly.toml  hie.yaml  stack.yaml  swapi-client.cabal  swapi.cabal
.github/: haskell-ci.yml
.github/workflows/: cd.yml  ci.yml  deploy.yml  haskell-ci.yml
app/: Main.hs
app/server/: Main.hs
assets/: app.css  app.js  tailwind.config.js
motd/: dev.txt  test.txt
priv/static/assets/: app.css
src/: SwapiClient.hs
src/Swapi/: Api.hs  Color.hs  Id.hs  Page.hs  Url.hs
src/Swapi/Internal/: Page.hs  Resource.hs  Url.hs  UrlData.hs
src/Swapi/Internal/Id/: Types.hs
src/Swapi/Internal/Page/: Types.hs
src/Swapi/Resource/: Film.hs  Person.hs  Planet.hs  Root.hs  Species.hs  Starship.hs  Vehicle.hs
src/SwapiClient/: Api.hs  Color.hs  Film.hs  Homeworld.hs  Id.hs  Page.hs  Person.hs  Planet.hs  Root.hs  Species.hs  Starship.hs  Url.hs  Vehicle.hs
src/SwapiClient/Internal/: Page.hs  Resource.hs  Url.hs  UrlData.hs
src/SwapiClient/Internal/Id/: Types.hs
src/SwapiClient/Internal/Page/: Types.hs
src/SwapiClient/Internal/UrlData/: Types.hs
src/SwapiClient/Resource/: Film.hs  Person.hs  Planet.hs  Root.hs  Species.hs  Starship.hs  Vehicle.hs
swapi-lib/: Swapi.hs  SwapiLib.hs
swapi-lib/Swapi/: Api.hs  Color.hs  Page.hs  Url.hs
swapi-lib/Swapi/Internal/: Page.hs  UrlData.hs
swapi-lib/Swapi/Internal/Page/: Types.hs
swapi-lib/Swapi/Internal/UrlData/: Types.hs
swapi-lib/Swapi/Resource/: Film.hs  Person.hs  Species.hs
swapi-lib/SwapiLib/: Api.hs  Color.hs  Id.hs  Page.hs  Url.hs
swapi-lib/SwapiLib/Internal/: Page.hs  Resource.hs  Url.hs  UrlData.hs
swapi-lib/SwapiLib/Internal/Id/: Types.hs
swapi-lib/SwapiLib/Internal/Page/: Types.hs
swapi-lib/SwapiLib/Internal/UrlData/: Types.hs
swapi-lib/SwapiLib/Resource/: Film.hs  Person.hs  Planet.hs  Root.hs  Species.hs  Starship.hs  Vehicle.hs
swapi-tui/: Main.hs
swapi-web/: Main.hs
swapi-web/SwapiWeb/Views/: Home.hs  Layout.hs  People.hs
swapi-web/assets/: tailwind.config.js
swapi-web/priv/static/assets/: app.css
swoogle/: Main.hs
swoogle/Swoogle/: Controllers.hs  Entry.hs  SearchData.hs
swoogle/Swoogle/Components/: Icon.hs  Search.hs
swoogle/Swoogle/Views/: Errors.hs  Home.hs  Layout.hs  SearchResults.hs
swoogle/SwoogleWeb/: Controllers.hs  Server.hs
swoogle/SwoogleWeb/Components/: Icon.hs  Search.hs
swoogle/SwoogleWeb/Views/: Errors.hs  Home.hs  Layout.hs  SearchResults.hs
swoogle/SwoogleWeb/Views/People/: Show.hs
swoogle/assets/: tailwind.config.js
swoogle/priv/static/assets/: app.css
test/: FilmTest.hs  MyLibTest.hs  PersonTest.hs  PlanetTest.hs  RootTest.hs  SpeciesTest.hs  StarshipTest.hs  UrlTest.hs  Util.hs  VehicleTest.hs
testdata/film/: 1_decode.data  1_decode.golden  1_encode.data  1_encode.golden
testdata/film_index/: 1_decode.data  1_decode.golden  1_encode.data  1_encode.golden
testdata/fixtures/film/: 1.json
testdata/fixtures/film_index/: 1.json
testdata/fixtures/person_index/: 1.json  2.json  3.json  4.json
testdata/fixtures/planet_index/: 1.json  2.json  3.json  4.json  5.json  6.json
testdata/fixtures/species_index/: 1.json  2.json  3.json  4.json
testdata/fixtures/starship_index/: 1.json  2.json  3.json  4.json
testdata/fixtures/vehicle_index/: 1.json  2.json  3.json  4.json
testdata/person_index/: 1.data  1.golden  2.data  3.data  3.golden  4.data  4.golden
testdata/person_index/decode/: 1.golden  2.data  2.golden  3.golden  4.data  4.golden
testdata/person_index/encode/: 1.golden  2.data  3.golden  4.data  4.golden
testdata/planet_index/decode/: 1.golden  2.data  3.data  4.golden  5.golden  6.golden
testdata/root/: root.data  root.golden
testdata/species_index/decode/: 1.data  1.golden  2.data  3.golden  4.golden
testdata/starship_index/: 1_decode.data
testdata/starship_index/decode/: 1.golden  2.data  2.golden  3.data  3.golden  4.data  4.golden
testdata/starship_index/encode/: 1.data  2.data  2.golden  3.data  3.golden  4.golden
testdata/vehicle_index/decode/: 1.golden  2.golden  3.golden  4.data
