cabal-version:      3.0
name:               swapi-client
version:            0.1.0.0
maintainer:         SEKUN <sekun@hey.com>
author:             SEKUN <sekun@hey.com>
homepage:           https://swapi-client.sekun.dev
bug-reports:        https://github.com/sekunho/swapi
synopsis:           A Haskell client for SWAPI
category:           Web
extra-source-files: CHANGELOG.md
tested-with:        GHC == 8.10.7

library
    exposed-modules:
        SwapiClient
      , SwapiClient.Api
      , SwapiClient.Person
      , SwapiClient.Homeworld
      , SwapiClient.Film
      , SwapiClient.Id
      , SwapiClient.Url
      , SwapiClient.Color
      , SwapiClient.Root
      , SwapiClient.Page
      , SwapiClient.Starship
      , SwapiClient.Vehicle

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
                      , InstanceSigs
                      , TypeApplications
                      , StrictData
                      , LambdaCase
                      , KindSignatures
                      , NoStarIsType
                      , ImportQualifiedPost
                      , ExplicitForAll
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving

    ghc-options:        -Wall -Werror

    build-depends:
        base ^>=4.14.3.0
      , aeson >=2.0 && <2.1
      , bytestring >= 0.11.2 && <0.12
      , req >=3.9 && <3.10
      , containers >=0.6 && <0.7
      , text >=1.2 && <1.3
      , scientific >=0.3.6.2 && <0.4
      , text-show >= 3.9.3 && <3.10
      , time >= 1.12.1 && <1.13
      , containers >= 0.6.5 && <0.6.6

executable swapi-client
    build-depends:
        base ^>=4.14.3.0
      , swapi-client >= 0.1 && <0.2

    main-is: Main.hs
    hs-source-dirs: app
    ghc-options:        -Wall -Werror
    default-language: Haskell2010

    default-extensions: OverloadedStrings
                      , InstanceSigs
                      , TypeApplications
                      , StrictData
                      , LambdaCase
                      , KindSignatures
                      , NoStarIsType
                      , ImportQualifiedPost
                      , ExplicitForAll
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving

test-suite swapi-client-test
    type:               exitcode-stdio-1.0
    main-is:            Driver.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    default-extensions:
        OverloadedStrings
      , InstanceSigs
      , TypeApplications
      , StrictData
      , LambdaCase
      , KindSignatures
      , NoStarIsType
      , ImportQualifiedPost
      , ExplicitForAll
      , DerivingStrategies
      , GeneralizedNewtypeDeriving

    other-modules:
        RootTest
      , UrlTest
      , PersonTest
      , FilmTest
      , StarshipTest
      , Util

    ghc-options:
      -O -threaded -rtsopts -with-rtsopts=-N -Wall

    build-depends:
        base ^>=4.14.3.0
      , aeson >=2.0 && <2.1
      , bytestring >=0.11.2 && <0.12
      , containers >=0.6 && <0.7
      , text >=1.2 && <1.3
      , scientific >=0.3.6.2 && <0.4
      , swapi-client
      , tasty >=1.4 && <1.5
      , tasty-golden >=2.3 && <2.4
      , tasty-hunit >=0.10 && <0.11
      , hspec >=2.9 && <2.10
      , tasty-hspec >=1.2 && <1.3
      , tasty-discover >=4.2 && < 4.3

    build-tool-depends:
      tasty-discover:tasty-discover
