cabal-version:      3.0
name:               swapi-client
description:
  @__swapi-client__@ is a client library for SWAPI (@https://swapi.dev/@).
  You can query resources from the JSON API which is decoded into easy to
  use types.

  == Queryable resources
  * People
  * Films
  * Starships
  * Vehicles
  * Species
  * Planets

version:            0.1.0.0
maintainer:         SEKUN <sekun@hey.com>
author:             SEKUN <sekun@hey.com>
license:            BSD-3-Clause
homepage:           https://swapi-client.sekun.dev
bug-reports:        https://github.com/sekunho/swapi
synopsis:           A Haskell client for SWAPI
category:           Web
extra-source-files:
  CHANGELOG.md
  testdata/fixtures/**/*.json
  testdata/**/*.golden
  testdata/**/*.data

extra-doc-files:
  swapi-haskell.svg

tested-with:        GHC == 8.10.7

source-repository head
  type: git
  location: https://github.com/sekunho/swapi.git

library
    exposed-modules:
        SwapiClient
      , SwapiClient.Api
      , SwapiClient.Person
      , SwapiClient.Film
      , SwapiClient.Id
      , SwapiClient.Url
      , SwapiClient.Color
      , SwapiClient.Root
      , SwapiClient.Page
      , SwapiClient.Starship
      , SwapiClient.Vehicle
      , SwapiClient.Species
      , SwapiClient.Planet

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
                      , InstanceSigs
                      , TypeApplications
                      , StrictData
                      , LambdaCase
                      , KindSignatures
                      , NoStarIsType
                      , ImportQualifiedPost
                      , ExplicitForAll
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving
                      , DerivingVia
                      , ScopedTypeVariables
                      , FlexibleInstances
                      , FlexibleContexts
                      , StandaloneKindSignatures


    ghc-options:      -Wall

    build-depends:
        base ^>=4.14.3.0
      , aeson >=2.0 && <2.1
      , bytestring >= 0.9.2 && <0.12
      , req >=3.9 && <3.10
      , containers >=0.6 && <0.7
      , text >=1.2 && <1.3
      , scientific >=0.3.6.2 && <0.4
      , text-show >= 3.9.3 && <3.10
      , time >= 1.2 && <1.13
      , containers >= 0.6.5 && <0.6.6

executable swapi-client
    build-depends:
        base ^>=4.14.3.0
      , swapi-client >= 0.1 && <0.2

    main-is: Main.hs
    hs-source-dirs: app
    ghc-options:        -Wall
    default-language: Haskell2010

    default-extensions: OverloadedStrings
                      , InstanceSigs
                      , TypeApplications
                      , StrictData
                      , LambdaCase
                      , KindSignatures
                      , NoStarIsType
                      , ImportQualifiedPost
                      , ExplicitForAll
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving
                      , DerivingVia
                      , ScopedTypeVariables
                      , FlexibleInstances
                      , FlexibleContexts
                      , StandaloneKindSignatures

test-suite swapi-client-test
    type:               exitcode-stdio-1.0
    main-is:            Driver.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    default-extensions:
        OverloadedStrings
      , InstanceSigs
      , TypeApplications
      , StrictData
      , LambdaCase
      , KindSignatures
      , NoStarIsType
      , ImportQualifiedPost
      , ExplicitForAll
      , DerivingStrategies
      , GeneralizedNewtypeDeriving
      , DerivingVia
      , ScopedTypeVariables
      , FlexibleInstances
      , FlexibleContexts
      , StandaloneKindSignatures

    other-modules:
        RootTest
      , UrlTest
      , PersonTest
      , FilmTest
      , StarshipTest
      , VehicleTest
      , SpeciesTest
      , PlanetTest
      , Util

    ghc-options:
      -threaded -rtsopts -with-rtsopts=-N -Wall

    build-depends:
        base ^>=4.14.3.0
      , aeson >=2.0 && <2.1
      , bytestring >=0.9.2 && <0.12
      , containers >=0.6 && <0.7
      , text >=1.2 && <1.3
      , scientific >=0.3.6.2 && <0.4
      , swapi-client
      , tasty >=1.4 && <1.5
      , tasty-golden >=2.3 && <2.4
      , tasty-hunit >=0.10 && <0.11
      , hspec >=2.9 && <2.10
      , tasty-hspec >=1.2 && <1.3
      , tasty-discover >=4.2 && < 4.3

    build-tool-depends:
      tasty-discover:tasty-discover
