cabal-version:      3.0
name:               swapi
description:
  @__swapi-lib__@ is a client library for SWAPI (@https://swapi.dev/@).
  You can query resources from the JSON API which is decoded into easy to
  use types.

  == Queryable resources
  * People
  * Films
  * Starships
  * Vehicles
  * Species
  * Planets

version:            0.1.0.0
maintainer:         SEKUN <sekun@hey.com>
author:             SEKUN <sekun@hey.com>
license:            BSD-3-Clause
homepage:           https://swapi-lib.sekun.dev
bug-reports:        https://github.com/sekunho/swapi
synopsis:           A Haskell client for SWAPI
category:           Web
extra-source-files:
  CHANGELOG.md
  testdata/fixtures/**/*.json
  testdata/**/*.golden
  testdata/**/*.data

extra-doc-files:
  swapi-haskell.svg

tested-with:        GHC == 8.10.7

source-repository head
  type: git
  location: https://github.com/sekunho/swapi.git

-- Some day GHC2021 will come. Or better yet, Haskell 202x Language Report.
-- One can dream...
common default-extensions
  default-extensions:
     OverloadedStrings
   , InstanceSigs
   , TypeApplications
   , StrictData
   , LambdaCase
   , KindSignatures
   , NoStarIsType
   , ImportQualifiedPost
   , ExplicitForAll
   , DerivingStrategies
   , GeneralizedNewtypeDeriving
   , DerivingVia
   , ScopedTypeVariables
   , FlexibleInstances
   , FlexibleContexts
   , StandaloneKindSignatures

library swapi-lib
    import: default-extensions
    exposed-modules:
        SwapiLib
      , SwapiLib.Internal.Url
      , SwapiLib.Internal.UrlData
      , SwapiLib.Internal.Page
      , SwapiLib.Internal.Resource
      , SwapiLib.Internal.UrlData.Types
      , SwapiLib.Internal.Page.Types
      , SwapiLib.Internal.Id.Types
      , SwapiLib.Api
      , SwapiLib.Id
      , SwapiLib.Color
      , SwapiLib.Url
      , SwapiLib.Page
      , SwapiLib.Resource.Root
      , SwapiLib.Resource.Person
      , SwapiLib.Resource.Film
      , SwapiLib.Resource.Starship
      , SwapiLib.Resource.Vehicle
      , SwapiLib.Resource.Species
      , SwapiLib.Resource.Planet

    hs-source-dirs:     swapi-lib
    default-language:   Haskell2010

    ghc-options:      -Wall

    build-depends:
        base >= 4.14.3.0 && < 5
      , aeson >=2.0 && <2.1
      , bytestring >= 0.9.2 && <0.12
      , req >=3.9 && <3.10
      , containers >=0.6 && <0.7
      , text >=1.2 && <1.3
      , scientific >=0.3.6.2 && <0.4
      , text-show >= 3.9.3 && <3.10
      , time >= 1.2 && <1.13
      , containers >= 0.6.5 && <0.6.6

executable swoogle-tui
    import: default-extensions
    build-depends:
        base >= 4.14.3.0 && < 5
      , swapi-lib >= 0.1 && <0.2
      , brick == 0.67

    main-is:          Main.hs
    hs-source-dirs:   swoogle-tui
    ghc-options:      -Wall
    default-language: Haskell2010

executable swoogle
    import: default-extensions
    build-depends:
       base >= 4.14.3.0 && < 5
     , swapi-lib == 0.1.0.0
     , scotty == 0.12
     , lucid >= 2.11.0 && < 2.12.0
     , text >=1.2 && <1.3

    main-is: Main.hs
    hs-source-dirs: swoogle

    other-modules:
       Swoogle.Views.Home
     , Swoogle.Views.Layout
     , Swoogle.Components.Icon

    -- I got the ghc options from here:
    -- https://gilmi.me/blog/post/2020/12/05/scotty-bulletin-board
    ghc-options: -static -optl-static -optl-pthread -fPIC -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

test-suite swapi-lib-test
    import:             default-extensions
    type:               exitcode-stdio-1.0
    main-is:            Driver.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    other-modules:
        RootTest
      , UrlTest
      , PersonTest
      , FilmTest
      , StarshipTest
      , VehicleTest
      , SpeciesTest
      , PlanetTest
      , Util

    ghc-options:
      -threaded -rtsopts -with-rtsopts=-N -Wall

    build-depends:
        base >= 4.14.3.0 && < 5
      , aeson >=2.0 && <2.1
      , bytestring >=0.9.2 && <0.12
      , containers >=0.6 && <0.7
      , text >=1.2 && <1.3
      , scientific >=0.3.6.2 && <0.4
      , swapi-lib
      , tasty >=1.4 && <1.5
      , tasty-golden >=2.3 && <2.4
      , tasty-hunit >=0.10 && <0.11
      , hspec >=2.9 && <2.10
      , tasty-hspec >=1.2 && <1.3
      , tasty-discover >=4.2 && < 4.3

    build-tool-depends:
      tasty-discover:tasty-discover
