cabal-version:      3.0
name:               swapi
description:
  @__swapi-lib__@ is a client library for SWAPI (@https://swapi.dev/@).
  You can query resources from the JSON API which is decoded into easy to
  use types.

  == Queryable resources
  * People
  * Films
  * Starships
  * Vehicles
  * Species
  * Planets

version:            0.1.0.0
maintainer:         SEKUN <sekun@hey.com>
author:             SEKUN <sekun@hey.com>
license:            BSD-3-Clause
homepage:           https://swapi-lib.sekun.dev
bug-reports:        https://github.com/sekunho/swapi
synopsis:           A Haskell client for SWAPI
category:           Web
extra-source-files:
  CHANGELOG.md
  testdata/fixtures/**/*.json
  testdata/**/*.golden
  testdata/**/*.data

extra-doc-files:
  swapi-haskell.svg

tested-with:        GHC == 8.10.7

source-repository head
  type: git
  location: https://github.com/sekunho/swapi.git

-- Some day GHC2021 will come. Or better yet, Haskell 202x Language Report.
-- One can dream...
common default-extensions
  default-extensions:
     OverloadedStrings
   , InstanceSigs
   , TypeApplications
   , StrictData
   , LambdaCase
   , KindSignatures
   , NoStarIsType
   , ImportQualifiedPost
   , ExplicitForAll
   , DerivingStrategies
   , GeneralizedNewtypeDeriving
   , DerivingVia
   , ScopedTypeVariables
   , FlexibleInstances
   , FlexibleContexts
   , StandaloneKindSignatures

library
    import: default-extensions
    exposed-modules:
        Swapi
      , Swapi.Internal.Url
      , Swapi.Internal.UrlData
      , Swapi.Internal.Page
      , Swapi.Internal.Resource
      , Swapi.Internal.UrlData.Types
      , Swapi.Internal.Page.Types
      , Swapi.Internal.Id.Types
      , Swapi.Api
      , Swapi.Id
      , Swapi.Color
      , Swapi.Url
      , Swapi.Page
      , Swapi.Resource.Root
      , Swapi.Resource.Person
      , Swapi.Resource.Film
      , Swapi.Resource.Starship
      , Swapi.Resource.Vehicle
      , Swapi.Resource.Species
      , Swapi.Resource.Planet

    hs-source-dirs:     src
    default-language:   Haskell2010

    ghc-options:      -Wall

    build-depends:
        base         >= 4.7 && <5
      , aeson
      , bytestring
      , containers
      , unordered-containers
      , text
      , scientific
      , time
      , req
      , text-show

-- executable swoogle-tui
--     import: default-extensions
--     build-depends:
--         base >= 4.7 && <5
--       swapi
--       , brick
--
--     main-is:          Main.hs
--     hs-source-dirs:   swoogle-tui
--     ghc-options:      -Wall
--     default-language: Haskell2010

executable swoogle
    import: default-extensions
    build-depends:
       base      >= 4.7 && <5
     , swapi
     , text
     , lucid
     , scotty

    main-is: Main.hs
    hs-source-dirs: swoogle

    other-modules:
       Swoogle.Views.Home
     , Swoogle.Views.Layout
     , Swoogle.Components.Icon
     , Swoogle.Components.Search

    -- I got the ghc options from here:
    -- https://gilmi.me/blog/post/2020/12/05/scotty-bulletin-board
    -- ghc-options: -static -optl-static -optl-pthread -fPIC -threaded -rtsopts -with-rtsopts=-N
    -- ghc-options: -threaded -rtsopts -with-rtsopts=-N -split-sections

    default-language: Haskell2010

test-suite swapi-lib-test
    import:             default-extensions
    type:               exitcode-stdio-1.0
    main-is:            Driver.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    other-modules:
        RootTest
      , UrlTest
      , PersonTest
      , FilmTest
      , StarshipTest
      , VehicleTest
      , SpeciesTest
      , PlanetTest
      , Util

    ghc-options:
      -threaded -rtsopts -with-rtsopts=-N -Wall

    build-depends:
        base >= 4.7 && <5
      , aeson
      , bytestring
      , containers
      , text
      , scientific
      , swapi
      , tasty
      , tasty-golden
      , tasty-hunit
      , hspec
      , tasty-hspec
      , tasty-discover

    build-tool-depends:
      tasty-discover:tasty-discover
