cabal-version:      3.0
name:               swapi
description:
  @__swapi-lib__@ is a client library for SWAPI (@https://swapi.dev/@).
  You can query resources from the JSON API which is decoded into easy to
  use types.
  == Queryable resources
  * People
  * Films
  * Starships
  * Vehicles
  * Species
  * Planets

version:            0.1.0.0
maintainer:         SEKUN <sekun@hey.com>
author:             SEKUN <sekun@hey.com>
license:            BSD-3-Clause
homepage:           https://swapi-lib.sekun.dev
bug-reports:        https://github.com/sekunho/swapi
synopsis:           A Haskell client for SWAPI
category:           Web
extra-source-files:
  CHANGELOG.md
  testdata/**/*.data
  testdata/**/*.golden
  testdata/fixtures/**/*.json

extra-doc-files:    swapi-haskell.svg
tested-with:        GHC ==8.10.7

source-repository head
  type:     git
  location: https://github.com/sekunho/swapi.git

-- Some day GHC2021 will come. Or better yet, Haskell 202x Language Report.
-- One can dream...
common default-extensions
  default-extensions:
    NoStarIsType
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StandaloneKindSignatures
    StrictData
    TypeApplications

library swapi-lib
  import:           default-extensions
  exposed-modules:
    Swapi
    Swapi.Api
    Swapi.Color
    Swapi.Id
    Swapi.Internal.Id.Types
    Swapi.Internal.Page
    Swapi.Internal.Page.Types
    Swapi.Internal.Resource
    Swapi.Internal.Url
    Swapi.Internal.UrlData
    Swapi.Internal.UrlData.Types
    Swapi.Page
    Swapi.Resource.Film
    Swapi.Resource.Person
    Swapi.Resource.Planet
    Swapi.Resource.Root
    Swapi.Resource.Species
    Swapi.Resource.Starship
    Swapi.Resource.Vehicle
    Swapi.Url

  hs-source-dirs:   swapi-lib
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , aeson       ^>=2.0.3
    , base        >=4.7     && <5
    , bytestring  ^>=0.10.12
    , containers  ^>=0.6.5
    , req         ^>=3.10.0
    , scientific  ^>=0.3.7
    , text        ^>=1.2.5.0
    , text-show   ^>=3.9.6
    , time        ^>=1.9.3

library swoogle
  import:           default-extensions
  exposed-modules:
    Swoogle.Entry
    Swoogle.SearchData
    SwoogleWeb.Components.Icon
    SwoogleWeb.Components.Search
    SwoogleWeb.Controllers
    SwoogleWeb.Server
    SwoogleWeb.Views.Errors
    SwoogleWeb.Views.Home
    SwoogleWeb.Views.Layout
    SwoogleWeb.Views.SearchResults

  hs-source-dirs:   swoogle
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , base        >=4.7     && <5
    , containers  ^>=0.6.5.1
    , http-types  ^>=0.12.3
    , lucid       ^>=2.11.0
    , scotty      ^>=0.12
    , swapi-lib
    , text        ^>=1.2.5.0
    , text-show   ^>=3.9.6

-- executable swoogle-tui
--     import: default-extensions
--     build-depends:
--         base >= 4.7 && <5
--       swapi
--       , brick
--
--     main-is:          Main.hs
--     hs-source-dirs:   swoogle-tui
--     ghc-options:      -Wall
--     default-language: Haskell2010

executable swoogle-server
  import:           default-extensions
  build-depends:
    , base        >=4.7     && <5
    , containers  ^>=0.6.5.1
    , scotty      ^>=0.12
    , swoogle
    , text        ^>=1.2.5.0
    , wai-extra   ^>=3.1.8

  main-is:          Main.hs
  hs-source-dirs:   app/server
  ghc-options:      -Wall

  -- I got the ghc options from here:
  -- https://gilmi.me/blog/post/2020/12/05/scotty-bulletin-board
  -- ghc-options: -static -optl-static -optl-pthread -fPIC -threaded -rtsopts -with-rtsopts=-N
  -- ghc-options:      -threaded -rtsopts -with-rtsopts=-N -split-sections -O2
  default-language: Haskell2010

test-suite swapi-lib-test
  import:             default-extensions
  type:               exitcode-stdio-1.0
  main-is:            Driver.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  other-modules:
    FilmTest
    PersonTest
    PlanetTest
    RootTest
    SpeciesTest
    StarshipTest
    UrlTest
    Util
    VehicleTest

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
    , aeson           ^>=2.0.3
    , base            >=4.7      && <5
    , bytestring      ^>=0.10.12
    , containers      ^>=0.6.5
    , hspec           ^>=2.9.4
    , scientific      ^>=0.3.7
    , swapi-lib
    , tasty           ^>=1.4.2.1
    , tasty-discover  ^>=4.2.2
    , tasty-golden    ^>=2.3.5
    , tasty-hspec     ^>=1.2
    , tasty-hunit     ^>=0.10.0.3
    , text            ^>=1.2.5.0

  build-tool-depends: tasty-discover:tasty-discover -any
